# rs-parallel

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
